Fix styling for dark mode and dark colour scheme; update sql files

--- a/public/scss/_nature_variables.scss
+++ b/public/scss/_nature_variables.scss
@@ -125,7 +125,7 @@ $megamenu-right: 0px !default;
 $megamenu-background-color: $boxes-background !default;
 $megamenu-background-color-home: $megamenu-background-color !default;
 $megamenu-item-width: 20% !default;
-$megamenu-padding: 20px 60px 5px 30px !default;
+$megamenu-padding: 20px 60px 20px 30px !default;
 $megamenu-link-lvl2-color: #000 !default;
 $megamenu-link-lvl2-color-hover: $primary !default;
 $megamenu-link-lvl3-color: #4a4a4a !default;
